Sign-in Form - [HTML]

--- a/Form-HTML/index.html
+++ b/Form-HTML/index.html
@@ -1,106 +1,136 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>- Dance Academy</title>
+    <link rel="stylesheet" href="./assets/styles/fonts.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./assets/styles/form.css" />
+  </head>
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let's Dance</title>
-    <link rel="stylesheet" href="./assets/styles/fonts.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/styles/form.css">
-</head>
-
-<body>
+  <body>
     <main>
-        <section class="bg-main">
-            <header>
-                <div class="header-wrap container d-flex">
-                    <!-- logo -->
-                    <div class="logo-wrap d-flex">
-                        <img src="./assets/images/logo.png" alt="logo">
-                    </div>
-
-                    <!-- nav -->
-                    <nav>
-                        <ul class="d-flex">
-                            <li class="text-cap">
-                                <a href="javascript:void(0);">Login</a>
-                            </li>
-                            <li class=" text-cap">
-                                <a href="javascript:void(0);">Register</a>
-                            </li>
-                            <li class="text-cap">
-                                <a href="javascript:void(0);">About Us</a>
-                            </li>
-                            <li class="text-cap">
-                                <a href="javascript:void(0);">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
-
-                    <!-- toggle-button -->
-                    <div class="toggle-wrap d-flex">
-                        <i class="fa-solid fa-bars"></i>
-
-                        <!-- toggle-nav -->
-                        <div class="toggle-nav">
-                            <!-- nav -->
-                            <nav>
-                                <ul class="d-flex">
-                                    <li class="text-cap">
-                                        <a href="javascript:void(0);">Login</a>
-                                    </li>
-                                    <li class=" text-cap">
-                                        <a href="javascript:void(0);">Register</a>
-                                    </li>
-                                    <li class="text-cap">
-                                        <a href="javascript:void(0);">About Us</a>
-                                    </li>
-                                    <li class="text-cap">
-                                        <a href="javascript:void(0);">Contact</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-            </header>
-
-            <!-- main content -->
-            <div class="content-wrap">
-                <div class="inputs-container">
-                    <form method="POST">
-                        <!-- username -->
-                        <div class="input-wrap username-wrap d-flex">
-                            <span>
-                                <i class="fa-solid fa-user"></i>
-                            </span>
-                            <input type="text" placeholder="username">
-                        </div>
-                        <!-- password -->
-                        <div class="input-wrap password-wrap d-flex">
-                            <span>
-                                <i class="fa-solid fa-lock"></i>
-                            </span>
-                            <input type="password" placeholder="password">
-                        </div>
-                        <!-- submit -->
-                        <button class="btn-submit text-upp">GET STARTED</button>
-                        <!-- create account - forget password -->
-                        <ul class="main-content-ul d-flex">
-                            <li>
-                                <a href="javascript:void(0);" class="text-upp">create account</a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" class="text-cap">forger Password?</a>
-                            </li>
-                        </ul>
-                    </form>
-                </div>
+      <section class="bg-main">
+        <header>
+          <div class="header-wrap container d-flex">
+            <!-- logo -->
+            <div class="logo-wrap d-flex">
+              <img src="./assets/images/logo.png" alt="logo" />
             </div>
 
-            <!-- footer -->
-            <footer></footer>
-        </section>
-    </main>
-</body>
+            <!-- nav -->
+            <nav>
+              <ul class="d-flex">
+                <li class="text-cap">
+                  <a href="javascript:void(0);">Login</a>
+                </li>
+                <li class="text-cap">
+                  <a href="javascript:void(0);">Register</a>
+                </li>
+                <li class="text-cap">
+                  <a href="javascript:void(0);">About Us</a>
+                </li>
+                <li class="text-cap">
+                  <a href="javascript:void(0);">Contact</a>
+                </li>
+              </ul>
+            </nav>
 
+            <!-- toggle-button -->
+            <div class="toggle-wrap d-flex">
+              <i class="fa-solid fa-bars"></i>
+
+              <!-- toggle-nav -->
+              <div class="toggle-nav">
+                <!-- nav -->
+                <nav>
+                  <ul class="d-flex">
+                    <li class="text-cap">
+                      <a href="javascript:void(0);">Login</a>
+                    </li>
+                    <li class="text-cap">
+                      <a href="javascript:void(0);">Register</a>
+                    </li>
+                    <li class="text-cap">
+                      <a href="javascript:void(0);">About Us</a>
+                    </li>
+                    <li class="text-cap">
+                      <a href="javascript:void(0);">Contact</a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </header>
+
+        <!-- main content -->
+        <div class="content-wrap">
+          <div class="inputs-container">
+            <form method="POST">
+              <!-- username -->
+              <div class="input-wrap username-wrap d-flex">
+                <span>
+                  <i class="fa-solid fa-user"></i>
+                </span>
+                <input type="text" placeholder="username" />
+              </div>
+              <!-- password -->
+              <div class="input-wrap password-wrap d-flex">
+                <span>
+                  <i class="fa-solid fa-lock"></i>
+                </span>
+                <input type="password" placeholder="password" />
+              </div>
+              <!-- submit -->
+              <button class="btn-submit text-upp" type="button">
+                GET STARTED
+              </button>
+              <!-- create account - forget password -->
+              <ul class="main-content-ul d-flex">
+                <li>
+                  <a href="javascript:void(0);" class="text-upp"
+                    >create account</a
+                  >
+                </li>
+                <li>
+                  <a href="javascript:void(0);" class="text-cap"
+                    >forger Password?</a
+                  >
+                </li>
+              </ul>
+            </form>
+          </div>
+        </div>
+
+        <!-- footer -->
+        <footer>
+          <div class="container">
+            <div class="footer-wrap d-flex">
+              <ul class="d-flex">
+                <li>
+                  <a href="javascript:void(0);">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0);">Terms & Conditions</a>
+                </li>
+                <li>
+                  <a href="javascript:void(0);">Contact Us</a>
+                </li>
+              </ul>
+              <p class="text-cap">
+                &copy; 2025 Dance Academy. All rights reserved.
+              </p>
+            </div>
+          </div>
+        </footer>
+      </section>
+    </main>
+  </body>
 </html>
