Phenomenon Template - [HTML-CSS]

--- a/Phenomenon-Template/index.html
+++ b/Phenomenon-Template/index.html
@@ -500,10 +500,16 @@
         </section>
 
         <!-- reviews section -->
-        <section>
+        <section class="review-section">
             <div class="container">
                 <div class="section-wrap">
-                    
+                    <div class="review-title-wrap">
+                        <span class="section-label-span text-cap">Reviews</span>
+                        <!-- title -->
+                        <div class="section-title-wrap-span">
+                            <h2>What do <span>People say </span>about us?</h2>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
