Phenomenon Template - [HTML-CSS]

--- a/Phenomenon-Template/index.html
+++ b/Phenomenon-Template/index.html
@@ -669,6 +669,11 @@
                             <h2><span>Discover </span>the story and <span>mission </span>that drives us forward</h2>
                         </div>
                     </div>
+                    <!-- video-wrap -->
+                    <div class="video-wrap mt-60 w-100">
+                        <video src="./assets/video/Phenomenon-Video.mp4" controls preload="auto" type="video/mp4">
+                        </video>
+                    </div>
                 </div>
             </div>
         </section>
