Phenomenon Template - [HTML-CSS]

--- a/Phenomenon-Template/index.html
+++ b/Phenomenon-Template/index.html
@@ -665,7 +665,7 @@
                 <div class="section-wrap">
                     <!-- title-wrap -->
                     <div class="video-title-wrap review-title-wrap mt-120">
-                        <span class="section-label-span text-cap">Reviews</span>
+                        <span class="section-label-span text-cap">Mission</span>
                         <!-- title -->
                         <div class="section-title-wrap-span">
                             <h2><span>Discover </span>the story and <span>mission </span>that drives us forward</h2>
