Phenomenon Template - [HTML-CSS]

--- a/Phenomenon-Template/index.html
+++ b/Phenomenon-Template/index.html
@@ -648,7 +648,7 @@
                             <a href="javascript:void(0);">
                                 <span class="d-flex">
                                     <strong>
-                                        Get a Quote
+                                        Get a quote
                                     </strong>
                                 </span>
                                 <span class="d-flex">
